tests/NormalTests/paczka1/fuzzy1/53622543.err
Error in line 1: Kp9Hn6SP S456 14,6
Error in line 6: A274 S456 5,9
Error in line 9: A274 A851 61,9
Error in line 13: 5QpvXpyLPL1 A851 21,0
Error in line 28: 5QpvXpyLPL1 S456 94,5
Error in line 16: A274 S436 74,9
